cameleon-impl/tests/macros/wrong_access_right.stderr
error: expected NA, RO, WO, or RW
 --> $DIR/wrong_access_right.rs:8:31
  |
8 |     #[entry(len = 2, access = Ro)]
  |                               ^^
